crates/solidity/testing/snapshots/bindings_output/yul/imported_deconstructed_constants/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

References and definitions: 
   ╭─[main.sol:1:1]
   │
 1 │ import {FOO} from "./constants.sol";
   │         ─┬─  
   │          ╰─── name: 1
   │          │   
   │          ╰─── unresolved
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 2
 4 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 3
   │ 
 6 │             let x := add(FOO, 1)
   │                 ┬    ─┬─ ─┬─  
   │                 ╰───────────── name: 4
   │                       │   │   
   │                       ╰─────── ref: built-in
   │                           │   
   │                           ╰─── ref: 1
───╯
Definiens: 
   ╭─[main.sol:1:1]
   │
 1 │ │     import {FOO} from "./constants.sol";
   │ │             ─┬─  
   │ │              ╰─── definiens: 1
 2 │ ╭───▶ 
   ┆ ┆ ┆   
 4 │ │ ╭─▶     function test() public {
   ┆ ┆ ┆   
 6 │ │ │               let x := add(FOO, 1)
   │ │ │                   ┬  
   │ │ │                   ╰── definiens: 4
   ┆ ┆ ┆   
 8 │ │ ├─▶     }
   │ │ │           
   │ │ ╰─────────── definiens: 3
 9 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 2
───╯
Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[constants.sol:1:1]
   │
 1 │ uint256 constant FOO = 1;
   │ ─────────────┬────────────  
   │              ╰────────────── Error occurred here.
───╯
References and definitions: 
Definiens: 
